# stm32f4-rs-examples

./: .cargo-generate.toml  404.html  Cargo.toml  Embed.toml  README.md  examples.html  index.html  intro.html  print.html  searchindex.js  set_up.html  toc.html  toc.js
.cargo/: config.toml
.github/workflows/: deploy.yml
STM32F4-RS-BOOK/: book.toml
STM32F4-RS-BOOK/src/: SUMMARY.md  examples.md  intro.md  set_up.md
STM32F4-RS-BOOK/src/examples/: blinky.md  buten.md  gpio.md  hello_world.md  i2c.md  pwm_dimmer.md  rtic.md  uart.md
STM32F4-RS-BOOK/src/examples/gpio/: as5600.md  hello_world.md
STM32F4-RS-BOOK/src/examples/rtic/: rtic_LED.md
STM32F4-RS-BOOK/src/examples/uart/: putty.md  uart_hello_world.md  uart_menu
examples/: EH_i2c.rs  as5600.rs  blinky.html  blinky.rs  buten.html  buten.rs  button.rs  gpio.html  hello_world.html  i2c.html  i2c_as5600.rs  potmeter_dimmer.html  potmeter_dimmer.rs  pwm_dimmer.html  pwm_dimmer.rs  rtic.html  rtic_blinky.rs  servo.rs  uart.html  uart.rs  uart_cli.rs  uart_echo.rs  uart_hello_world.rs
examples/gpio/: blinky.html  buten.html  hello_world.html  potmeter_dimmer.html  pwm_dimmer.html
examples/rtic/: rtic_LED.html
examples/uart/: putty.html  uart_hello_world.html  uart_menu.html
python/: UART_example.py  tester99.py
src/: lib.rs  main.rs
