[package]
name = "stm32f4-rs-examples"
version = "0.1.0"
authors = ["Eirik Kaldhol Strandman <63415376+Eirik2020@users.noreply.github.com>"]
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
rtic = {version = "2.1.1", features=["thumbv7-backend", "rtic-monotonics"]}
rtic-monotonics = { version = "2.0.1", features = ["cortex-m-systick"]}
rtic-sync = "1.3.0"

defmt = "0.3.8"
defmt-rtt = "0.4.1"

panic-halt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
rtt-target = "0.6.1"
panic-rtt-target = "0.2.0"

embedded-hal = "1.0.0" 
nb = "1.1"

heapless = "0.8.0"
as5600 = "0.8.0"



[dependencies.stm32f4xx-hal]
version = "0.22.1"
features = ["stm32f401", "defmt"]



# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
